src/golden/functions/errors/test.golden/splitdefn.fl
	guarded x
		| true = "hello"
		| false = "goodbye"
